--- a/themes/zephyr/front-end/src/styles/style.scss
+++ b/themes/zephyr/front-end/src/styles/style.scss
@@ -5,6 +5,8 @@
 @import "general-classes";
 @import "layouts/quform_form";
 @import "pages/growthGuide";
+@import "pages/say-hello";
+
 
 /*!
  end general ##############################
