component-article-guide done isa

--- a/themes/zephyr/front-end/src/components/component-article-guide/index.html
+++ b/themes/zephyr/front-end/src/components/component-article-guide/index.html
@@ -8,13 +8,13 @@
       <div class="article-guide">
         <div class="article-guide-title center">
           <h6 class="headline-6 normal word-up">GROWTH GUIDE</h6>
-          <h2 class="headline-2">Digital Growth Marketing & Transformation for small businesses </h2>
+          <h2 class="headline-2 real-line-up">Digital Growth Marketing & Transformation for small businesses </h2>
         </div>
         <div class="article-guide-content">
           <div class="row">
             <div class="col-12 col-md-auto">
               <div class="left-content">
-                <h6 class="headline-6">Contents</h6>
+                <h6 class="headline-6 word-up">Contents</h6>
                 <ol class="article-container">
                   <li class="guide iv-st-from-bottom">
                     <div class="title">
@@ -106,8 +106,8 @@
             </div>
             <div class="col-12 col-md">
               <div class="right-content">
-                <h6 class="headline-8 normal-line"><span>1.2</span> Websites & why I am not talking about them here.</h6>
-                <p class="paragraph-1">When we first start working with clients, often the first thing that we do is work on defining their proposition and brand and then building their
+                <h6 class="headline-8 normal-line iv-st-from-bottom"><span>1.2</span> Websites & why I am not talking about them here.</h6>
+                <p class="paragraph-1 real-line-up">When we first start working with clients, often the first thing that we do is work on defining their proposition and brand and then building their
                   website. However this guide specifically avoids talking a lot about this process. This is because there is a huge amount of variation in the process and requirements when approaching
                   these elements. Different companies need their website to do completely different things and defining a companies proposition and brand is a creative process that is more art than
                   science, we might come back to talk about these elements in more detail at a later date but for now we wanted to focus on the nuts and bolts of setting up a digital presence and
