--- a/themes/zephyr/front-end/src/components/component-contact-us/index.html
+++ b/themes/zephyr/front-end/src/components/component-contact-us/index.html
@@ -7,26 +7,24 @@
     <div class="container">
       <div class="contact-us-model">
         <div class="data">
-          <h3 class="title word-up center mobile-only">Send us a message</h3>
+          <h3 class="title-contact word-up center mobile-only">Send us a message</h3>
           <form>
             <input class="iv-st-from-bottom" type="text" placeholder="Name">
             <input class="iv-st-from-bottom" type="email" placeholder="Email">
             <textarea class="iv-st-from-bottom" placeholder="Message"></textarea>
           </form>
-          <a href="#" class="btn has-bg iv-st-from-bottom">Send message</a>
+          <a href="#" class="btn iv-st-from-bottom">Send message</a>
           <svg class="arrow desktop-only" width="25" height="40" viewBox="0 0 25 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20L25 40L25 0L0 20Z" fill="#333333"/>
           </svg>
         </div>
         <div class="content">
-          <h3 class="title word-up"> We’d love to hear about your product or service</h3>
-          <p class="paragraph-1 real-line-up small-fz center mobile-only"> We are open to hear from new ideas and founders, or just to have a chat.
-          </p>
-          <p class="paragraph-1 real-line-up  small-fz center desktop-only">
-            We are open to hear from new ideas and founders, or just to have a chat. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+          <h3 class="title-contact word-up"> Tell us about your product or service </h3>
+          <p class="paragraph-1 word-up small-fz center">
+            We are open to hear from new ideas and founders, or just to have a chat.
           </p>
           <div class="contact-info">
-            <div class="icon-and-info">
+            <div class="icon-and-info iv-st-from-bottom">
               <svg class="desktop-only" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M19.0001 1H1.1001V13.3057H19.0001V1Z" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
                 <path d="M1 1L10.0503 7.99337L18.9 1" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
@@ -42,7 +40,7 @@
               </svg>
               <p class="paragraph-1 small-fz">hello@zephyr.ai</p>
             </div>
-            <div class="icon-and-info">
+            <div class="icon-and-info iv-st-from-bottom">
               <svg class="desktop-only" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M3.87135 1.01247C3.85473 0.995842 3.82979 0.995842 3.81317 1.01247L1.00772 3.81913C0.691845 9.97713 10.1431 18.9335 16.1821 19L18.9875 16.1933C19.0042 16.1767 19.0042 16.1518 18.9875 16.1351L14.4947 11.6403C14.478 11.6237 14.4531 11.6237 14.4365 11.6403L12.2877 13.79C10.6626 13.711 6.44821 9.20374 6.21962 7.71934L8.36839 5.56965C8.38501 5.55301 8.38501 5.52807 8.36839 5.51143L3.87135 1.01247Z"
@@ -55,7 +53,7 @@
               </svg>
               <p class="paragraph-1 small-fz">+44 07887 552949</p>
             </div>
-            <div class="icon-and-info">
+            <div class="icon-and-info iv-st-from-bottom">
               <svg class="desktop-only" width="20" height="23" viewBox="0 0 17 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M8.58849 11.5276C10.414 11.5276 11.8938 10.0477 11.8938 8.22228C11.8938 6.39682 10.414 4.91699 8.58849 4.91699C6.76303 4.91699 5.2832 6.39682 5.2832 8.22228C5.2832 10.0477 6.76303 11.5276 8.58849 11.5276Z"
