--- a/themes/zephyr/front-end/src/components/component-our-team/index.html
+++ b/themes/zephyr/front-end/src/components/component-our-team/index.html
@@ -7,124 +7,122 @@
       <div class="our-team">
         <div class="our-team-title center">
           <h6 class="headline-6 normal word-up">OUR TEAM</h6>
-          <h2 class="headline-2 real-line-up">Strategically led, global impact</h2>
+          <h2 class="headline-2 word-up">Strategically led, global impact</h2>
         </div>
         <div class="our-team-content">
           <div class="row">
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper milky-circle">
-                  <img alt="team person" src="./../../html/images/team-person1.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person1.png">
                 </div>
                 <h5 class="name">Xan</h5>
                 <h6 class="title-job">Founder and strategist</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper oval">
-                  <img alt="team person" src="./../../html/images/team-person2.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person2.png">
                 </div>
                 <h5 class="name">Nick</h5>
                 <h6 class="title-job">Founder and strategist</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper red-circle">
-                  <img alt="team person" src="./../../html/images/team-person3.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person3.png">
                 </div>
                 <h5 class="name">Joel</h5>
                 <h6 class="title-job">Art Director</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper green-circle">
-                  <img alt="team person" src="./../../html/images/team-person4.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person4.png">
                 </div>
                 <h5 class="name">Jorge</h5>
                 <h6 class="title-job">Designer</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper milky-circle">
-                  <img alt="team person" src="./../../html/images/team-person1.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person1.png">
                 </div>
                 <h5 class="name">Dylan</h5>
                 <h6 class="title-job">Google Adwords Specialist</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper oval">
-                  <img alt="team person" src="./../../html/images/team-person2.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person2.png">
                 </div>
                 <h5 class="name">Red</h5>
                 <h6 class="title-job">Paid Social Specialist</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper big-green-circle">
-                  <img alt="team person" src="./../../html/images/team-person5.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person5.png">
                 </div>
                 <h5 class="name">Laura</h5>
                 <h6 class="title-job">Frontend Developer</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper green-circle">
-                  <img alt="team person" src="./../../html/images/team-person4.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person4.png">
                 </div>
                 <h5 class="name">Sudir</h5>
                 <h6 class="title-job">Wordpress Developer</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper milky-circle">
-                  <img alt="team person" src="./../../html/images/team-person1.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person1.png">
                 </div>
                 <h5 class="name">Dino</h5>
                 <h6 class="title-job">Youtube Growth Hacker</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper oval">
-                  <img alt="team person" src="./../../html/images/team-person2.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person2.png">
                 </div>
                 <h5 class="name">Dr Eugene</h5>
                 <h6 class="title-job">SEO specialist</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper red-circle">
-                  <img alt="team person" src="./../../html/images/team-person3.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person3.png">
                 </div>
                 <h5 class="name">Angelo</h5>
                 <h6 class="title-job">Virtual Assistant</h6>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-4 col-xl-3 team-parent">
               <div class="team-person">
                 <div class="image-wrapper green-circle">
-                  <img alt="team person" src="./../../html/images/team-person4.png">
+                  <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person4.png">
                 </div>
                 <h5 class="name">Ike</h5>
                 <h6 class="title-job">Conversion Rate Optimisation</h6>
               </div>
             </div>
-            <div class="col-12">
-              <a href="#" class="load-more btn">
-                Load More
-              </a>
-            </div>
           </div>
+          <a class="load-more btn iv-st-from-bottom" href="#">
+            Load More
+          </a>
         </div>
       </div>
     </div>
