--- a/themes/zephyr/front-end/src/components/component-our-team/style.scss
+++ b/themes/zephyr/front-end/src/components/component-our-team/style.scss
@@ -2,100 +2,134 @@
 @import "src/styles/mixins";
 
 section.component-our-team {
-    @include marginY(105);
+    @include marginY(105px);
     @include min-medium-screen{
         @include marginY(size(111),size(200));
     }
     .our-team {
         .our-team-title {
-            margin-bottom: size(94);
+            margin-bottom: size(64);
+            @include min-medium-screen{
+                margin-bottom: size(94);
+            }
+            .headline-6{
+                margin-bottom: size(20);
+                display: none;
+                @include min-medium-screen{
+                    display: block;
+                }
+            }
         }
         
         .our-team-content {
-            .team-person {
-                margin-bottom: size(25);
-                max-width: size(232);
+            .row{
+                @include change-gutter(35px);
                 @include min-medium-screen{
-                    margin-bottom: size(62);
+                    @include change-gutter(65px);
                 }
-                .image-wrapper {
-                    position: relative;
-                    margin-bottom: size(15);
-                    padding-top: 107%;
-                    height: 0;
+            }
+            .team-parent{
+                &:nth-last-child(-n+4){
+                    display: none;
                     @include min-medium-screen{
-                        margin-bottom: size(30);
+                        display: unset;
                     }
-                    img {
-                        position: absolute;
-                        top: 0;
-                        height: 100%;
-                        transition: transform 400ms;
-                        width: 100%;
+                }
+                .team-person {
+                    margin-bottom: size(30);
+                    @include min-medium-screen{
+                        margin-bottom: size(36);
+                        max-width: size(232);
+                    }
+                    @include x-large-screen{
+                        margin-bottom: size(62);
+                    }
+                    .image-wrapper {
+                        position: relative;
+                        margin-bottom: size(21);
+                        padding-top: 107%;
+                        height: 0;
                         @include min-medium-screen{
-                            margin-left: size(22);
+                            margin-bottom: size(27);
                         }
-                        &:hover {
-                            transform: translate(-10px, -10px) scale(1.1);
+                        img {
+                            position: absolute;
+                            top: 0;
+                            height: 100%;
+                            transition: transform 400ms;
+                            width: 100%;
+                            @include min-medium-screen{
+                                margin-left: size(20);
+                            }
+                            &:hover {
+                                transform: translate(-10px, -10px) scale(1.1);
+                            }
+                        }
+            
+                        &.milky-circle {
+                            background: url('./../../html/images/milky-circle.png') no-repeat left 58%;
+                        }
+            
+                        &.oval {
+                            background: url('./../../html/images/oval.png') no-repeat top left;
+                            background-size: contain;
+                            @include min-medium-screen{
+                                background-size: auto;
+                            }
+                        }
+            
+                        &.red-circle {
+                            background: url('./../../html/images/red-circle.png') no-repeat right 67%;
+                        }
+            
+                        &.green-circle {
+                            background: url('./../../html/images/green-circle.png') no-repeat 20% 35%;
+                        }
+            
+                        &.big-green-circle {
+                            background: url('./../../html/images/big-green-cricle.png') no-repeat right 40%;
                         }
                     }
-                    
-                    &.milky-circle {
-                        background: url('./../../html/images/milky-circle.png') no-repeat left 58%;
+        
+                    .name, .title-job {
+                        color: $zephyr-gray;
                     }
-                    
-                    &.oval {
-                        background: url('./../../html/images/oval.png') no-repeat top left;
-                        background-size: contain;
+        
+                    .name {
+                        font-family: $Canela;
+                        font-size: size(18);
+                        font-weight: 300;
+                        letter-spacing: size(0.28);
                         @include min-medium-screen{
-                            background-size: auto;
+                            font-size: size(23);
+                            margin-bottom: size(7);
+                        }
+                        @include x-large-screen {
+                            font-size: size(27);
+                            margin-bottom: size(12);
                         }
                     }
-                    
-                    &.red-circle {
-                        background: url('./../../html/images/red-circle.png') no-repeat right 67%;
-                    }
-                    
-                    &.green-circle {
-                        background: url('./../../html/images/green-circle.png') no-repeat 20% 35%;
-                    }
-                    
-                    &.big-green-circle {
-                        background: url('./../../html/images/big-green-cricle.png') no-repeat right 40%;
-                    }
-                }
-                
-                .name, .title-job {
-                    color: $zephyr-gray;
-                }
-                
-                .name {
-                    font-family: $Canela;
-                    font-size: size(18);
-                    font-weight: 300;
-                    letter-spacing: size(0.28);
-                    margin-bottom: size(7);
-                    @include x-large-screen {
-                        font-size: size(27);
-                        margin-bottom: size(10);
-                    }
-                }
-                
-                .title-job {
-                    color: #252525;
-                    font-family: $Sailec;
-                    font-size: size(11);
-                    font-weight: 400;
-                    letter-spacing: size(0.08);
-                    line-height: size(25);
-                    @include x-large-screen {
-                        font-size: size(16);
+        
+                    .title-job {
+                        color: #252525;
+                        font-family: $Sailec;
+                        font-size: size(11);
+                        font-weight: 400;
+                        letter-spacing: size(0.08);
+                        line-height: size(25);
+                        @include min-medium-screen{
+                            font-size: size(13);
+                        }
+                        @include x-large-screen {
+                            font-size: size(16);
+                        }
                     }
                 }
             }
             .load-more{
                 display: flex;
-                margin: 0 auto;
+                @include marginX(auto);
+                margin-top: size(30);
                 @include min-medium-screen{
                     display: none;
                 }
