team page not completed yet need to adjust hero like our team hero

--- a/themes/zephyr/front-end/src/components/component-our-team/index.html
+++ b/themes/zephyr/front-end/src/components/component-our-team/index.html
@@ -16,8 +16,8 @@
                 <div class="image-wrapper milky-circle">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person1.png">
                 </div>
-                <h5 class="name">Xan</h5>
-                <h6 class="title-job">Founder and strategist</h6>
+                <h5 class="name word-up">Xan</h5>
+                <h6 class="title-job word-up">Founder and strategist</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -25,8 +25,8 @@
                 <div class="image-wrapper oval">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person2.png">
                 </div>
-                <h5 class="name">Nick</h5>
-                <h6 class="title-job">Founder and strategist</h6>
+                <h5 class="name word-up">Nick</h5>
+                <h6 class="title-job word-up">Founder and strategist</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -34,8 +34,8 @@
                 <div class="image-wrapper red-circle">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person3.png">
                 </div>
-                <h5 class="name">Joel</h5>
-                <h6 class="title-job">Art Director</h6>
+                <h5 class="name word-up">Joel</h5>
+                <h6 class="title-job word-up">Art Director</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -43,8 +43,8 @@
                 <div class="image-wrapper green-circle">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person4.png">
                 </div>
-                <h5 class="name">Jorge</h5>
-                <h6 class="title-job">Designer</h6>
+                <h5 class="name word-up">Jorge</h5>
+                <h6 class="title-job word-up">Designer</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -52,8 +52,8 @@
                 <div class="image-wrapper milky-circle">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person1.png">
                 </div>
-                <h5 class="name">Dylan</h5>
-                <h6 class="title-job">Google Adwords Specialist</h6>
+                <h5 class="name word-up">Dylan</h5>
+                <h6 class="title-job word-up">Google Adwords Specialist</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -61,8 +61,8 @@
                 <div class="image-wrapper oval">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person2.png">
                 </div>
-                <h5 class="name">Red</h5>
-                <h6 class="title-job">Paid Social Specialist</h6>
+                <h5 class="name word-up">Red</h5>
+                <h6 class="title-job word-up">Paid Social Specialist</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -70,8 +70,8 @@
                 <div class="image-wrapper big-green-circle">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person5.png">
                 </div>
-                <h5 class="name">Laura</h5>
-                <h6 class="title-job">Frontend Developer</h6>
+                <h5 class="name word-up">Laura</h5>
+                <h6 class="title-job word-up">Frontend Developer</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -79,8 +79,8 @@
                 <div class="image-wrapper green-circle">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person4.png">
                 </div>
-                <h5 class="name">Sudir</h5>
-                <h6 class="title-job">Wordpress Developer</h6>
+                <h5 class="name word-up">Sudir</h5>
+                <h6 class="title-job word-up">Wordpress Developer</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -88,8 +88,8 @@
                 <div class="image-wrapper milky-circle">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person1.png">
                 </div>
-                <h5 class="name">Dino</h5>
-                <h6 class="title-job">Youtube Growth Hacker</h6>
+                <h5 class="name word-up">Dino</h5>
+                <h6 class="title-job word-up">Youtube Growth Hacker</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -97,8 +97,8 @@
                 <div class="image-wrapper oval">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person2.png">
                 </div>
-                <h5 class="name">Dr Eugene</h5>
-                <h6 class="title-job">SEO specialist</h6>
+                <h5 class="name word-up">Dr Eugene</h5>
+                <h6 class="title-job word-up">SEO specialist</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -106,8 +106,8 @@
                 <div class="image-wrapper red-circle">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person3.png">
                 </div>
-                <h5 class="name">Angelo</h5>
-                <h6 class="title-job">Virtual Assistant</h6>
+                <h5 class="name word-up">Angelo</h5>
+                <h6 class="title-job word-up">Virtual Assistant</h6>
               </div>
             </div>
             <div class="col-6 col-md-4 col-xl-3 team-parent">
@@ -115,8 +115,8 @@
                 <div class="image-wrapper green-circle">
                   <img class="iv-st-from-bottom" alt="team person" src="./../../html/images/team-person4.png">
                 </div>
-                <h5 class="name">Ike</h5>
-                <h6 class="title-job">Conversion Rate Optimisation</h6>
+                <h5 class="name word-up">Ike</h5>
+                <h6 class="title-job word-up">Conversion Rate Optimisation</h6>
               </div>
             </div>
           </div>
