component-about-us not completed yet

--- a/themes/zephyr/front-end/src/components/component-about-us/index.html
+++ b/themes/zephyr/front-end/src/components/component-about-us/index.html
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
 <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
 <meta content="ie=edge" http-equiv="X-UA-Compatible">
+<div smooth-scroll-container="">
 
 <section class="component-about-us">
   <div class="container">
@@ -12,9 +13,9 @@
           worked closely with client teams to help them define their proposition and brand profiles, through to designing and developing impactful web experiences and results driven marketing
           campaigns</p>
       </div>
-      <div class="about-us-content">
-        <div class="row">
-          <div class="col-12 col-md-4">
+      <div class="about-us-content swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
             <div class="about-logo">
               <div class="image-wrapper">
                 <img src="./../../html/images/about-logo1.png" alt="about logo1">
@@ -22,7 +23,7 @@
               <p class="paragraph-1">Cras varius velit blandit, pellentesque purus blandit, elementum purus. Duis elementum eros quam, et tristique augue porta quis. Aenean rutrum quam vel augue pretium faucibus.</p>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="swiper-slide">
             <div class="about-logo">
               <div class="image-wrapper">
                 <img src="./../../html/images/about-logo2.png" alt="about logo2">
@@ -30,7 +31,7 @@
               <p class="paragraph-1">Mauris aliquet interdum sapien, eu convallis eros lacinia eget. Mauris leo est, vestibulum at lorem sit amet, vehicula posuere felis. Morbi malesuada, ex in ultricies.</p>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="swiper-slide">
             <div class="about-logo">
               <div class="image-wrapper">
                 <img src="./../../html/images/about-logo3.png" alt="about logo3">
@@ -38,7 +39,7 @@
               <p class="paragraph-1">Etiam consectetur lorem ut sapien ullamcorper, sed sollicitudin dolor venenatis. Aenean pharetra vel turpis eu tempus. Sed vulputate arcu eu dolor ornare, quis posuere erat.</p>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="swiper-slide">
             <div class="about-logo">
               <div class="image-wrapper">
                 <img src="./../../html/images/about-logo4.png" alt="about logo4">
@@ -46,7 +47,7 @@
               <p class="paragraph-1">Pellentesque pharetra ex ac mauris dictum, a consectetur diam feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam rhoncus.</p>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="swiper-slide">
             <div class="about-logo">
               <div class="image-wrapper">
                 <img src="./../../html/images/about-logo5.png" alt="about logo5">
@@ -54,8 +55,9 @@
               <p class="paragraph-1">Etiam laoreet ullamcorper ipsum nec scelerisque. Cras vel neque quis justo interdum porta ut eget sapien. Vestibulum consequat justo fringilla, dapibus sapien sed, blandit odio.</p>
             </div>
           </div>
-
         </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
       </div>
       <div class="about-us-images">
         <div class="image-1 image same-image">
@@ -92,4 +94,5 @@
     </div>
   </div>
 </section>
+</div>
 <script src="./main.js"></script>
